# saludador

./: .gitignore  CONFIGURACION-CI-CD.md  README.md  pyproject.toml
.github/workflows/: pr-validation.yml  pre-release.yml  release.yml
src/alpyro_saludador/: __init__.py  cli.py  saludador.py
tests/: __init__.py  test_saludador.py
