[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "alpyro-saludador"
dynamic = ["version"]
description = "Un paquete de ejemplo para aprender a crear paquetes Python con mejores prácticas"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "amaldonadomat", email = "amaldonadomat@amaldonadomat.com"}
]
keywords = ["ejemplo", "tutorial", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependencias del proyecto
dependencies = []

# Dependencias opcionales (para desarrollo, testing, etc.)
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

# Definición de comandos CLI
[project.scripts]
saludar = "alpyro_saludador.cli:main"

# URLs del proyecto
[project.urls]
Homepage = "https://github.com/tuusuario/alpyro-saludador"
Repository = "https://github.com/tuusuario/alpyro-saludador"
"Bug Tracker" = "https://github.com/tuusuario/alpyro-saludador/issues"

# Configuración de setuptools para encontrar los paquetes
[tool.setuptools.packages.find]
where = ["src"]

# Configuración de pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Configuración de coverage
[tool.coverage.run]
source = ["alpyro_saludador"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Configuración de setuptools-scm para versionado automático desde Git tags
[tool.setuptools_scm]
# Escribe la versión en un archivo _version.py para acceso en runtime
write_to = "src/alpyro_saludador/_version.py"
